# mcp-on-lambda

./: Cargo.toml
src/: counter.rs  function_handler.rs  lib.rs  main.rs  router.rs  session_manager.rs
