[package]
name = "mcp-on-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
lambda_http = "0.17.0"
rmcp = { version = "0.6.1", features = ["transport-io", "transport-streamable-http-server", "transport-worker"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
