[package]
name = "mcp-on-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.6"
aws-sdk-dynamodb = "1.92.0"
axum = "0.8.4"
futures = "0.3.31"
lambda_http = "0.17.0"
rmcp = { version = "0.6.1", features = ["transport-io", "transport-streamable-http-server", "transport-worker"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
